test_suite/tests/ui/on-unimplemented/tuple_field.rs
use serde_derive::{Deserialize, Serialize};

struct NoImpls;

#[derive(Serialize, Deserialize)]
struct S(u32, NoImpls);

fn main() {}
